# MMYCodeSwitch-API

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  build.bat  build.ps1  build.sh  package-lock.json  package.json
.claude/: settings.json  settings.local.json
.workbuddy/memory/: 2026-04-20.md  2026-04-26.md
.workbuddy/plans/: fix-inject-and-add-cli-launch_df2036a4.md  multi-project-api-switcher_4dca5c29(未完成).md
MMYCodeSwitch-API-Portable/: Readme.txt
backups/: mmycs_backup_20260422_114405.mmycs  mmycs_full_backup_20260426_203121.mmycs  mmycs_full_backup_20260427_141740.mmycs  mmycs_full_backup_20260427_171957.mmycs
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  crypto.rs  inject.rs  lib.rs
src/components/: AppContent.vue  PluginManager.vue  ProjectList.vue  ProviderForm.vue  ProviderGrid.vue  QuickSetup.vue  Settings.vue  SkillManager.vue  TemplateManager.vue  TokenStats.vue
src/i18n/: en.ts  index.ts  zh.ts
src/stores/: app.ts
开发文档/: MMYCodeSwitch-API开发文档.md  MMYCodeSwitch-API项目分析报告.md  Tauri-Vue3桌面应用架构模板.md  供应商目录结构优化方案.md  多项目重构方案.md
开发文档/MMY-Tauri-Template/: README.md  index.html  package.json  vite.config.ts
开发文档/MMY-Tauri-Template/src/: App.vue  main.ts
开发文档/MMY-Tauri-Template/src-tauri/: Cargo.toml  tauri.conf.json
开发文档/MMY-Tauri-Template/src-tauri/icons/: README.md
开发文档/MMY-Tauri-Template/src-tauri/src/: config.rs  lib.rs
开发文档/MMY-Tauri-Template/src/components/: AppContent.vue  CardGrid.vue  Settings.vue
(+4 files in other folders)
